--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@googlemaps/js-api-loader": "^1.16.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "vite": "^5.4.0"
   }
 }
